--- a/03-specificProjects.Rmd
+++ b/03-specificProjects.Rmd
@@ -17,3 +17,6 @@ My work is to do a regulatory follow up to lab discoveries on chromatin organiza
 
 **Julie**  
 My work focuses on understanding expression heterogeneity in gliomas. I analyse primarily scRNA-seq data from the Suva lab to 1) define the subpopulations of cancer cells that exist in different glioma types, 2) understand the emergence of these subpopulations as a function of cell lineage, genetics and the TME and 3) revisit the distinctions between glioma types. 
+
+**Noam G**  
+My current project focuses on pan-cancer deconvolution of bulk RNA-seq data in order to identify possible subgroups of Interferon response and MHC class II genes in both cancer and immune cells. 
